Propo resto + ajout resto

--- a/choixdej/ajout/templates/ajout/ajout.html
+++ b/choixdej/ajout/templates/ajout/ajout.html
@@ -1,15 +1,100 @@
-<!DOCTYPE html>
-<html lang="fr">
+<!doctype html>
+<html>
 
-<head>
-    <title>Choixdej</title>
-</head>
-<body id="page-top" class="index">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Team ChoixDej">
+        <title>Index - ChoixDej</title>
 
-        Ajoute un nouveau restaurant pour élargir le choix :D
-        </br>
-        <a href="{% url 'accueil' %}">Accueil</a>
-          <a href="{% url 'deco' %}">Deconnexion</a>
-</body>
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
+        <link href="/static/css/main.css" rel="stylesheet" type="text/css">
+        <!-- Respond.js IE8 support of media queries -->
+    	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    	<!--[if lt IE 9]>
+    		<script src="assets/js/respond.min.js"></script>
+    	<![endif]-->
+    </head>
+
+    <body>
+        <header>
+
+
+            <nav class="navbar  bg-primary navbar-static-top">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <a href="#"><h3>  <img src="/static/images/logo.png" width="30" alt="logo"/>ChoixDej ! </h3></a>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="{% url 'accueil' %}">Accueil</a></li>
+                            <li><a href="{% url 'groupe' %}">Gestion groupes </a></li>
+                            <li><a href="{% url 'vote' %}">Noter</a></li>
+                            <li><a href="{% url 'ajout' %}">Ajouter Resto</a></li>
+                            <li><a href="{% url 'deco' %}">Déconnexion</a></li>
+                        </ul>
+                    </div><!--/.nav-collapse -->
+                </div>
+            </nav>
+        </header>
+       <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-12 ">
+                  <form class="container" id="form1" enctype="multipart/form-data" method="post" action=".">
+                    {% csrf_token %}
+                    <h1 id="titre-resto"> Ajout du restaurant </h1>
+                    <div class="form-group row">
+                        <label for="example-text-input" class="col-2 col-form-label">Nom du restaurant</label>
+                        <div class="col-10">
+                          <p>{{ form.titre.errors }}<label for="{{form.titre.id_for_label}}"></label>
+                          <input class="form-control" placeholder="Mcdonalds" id="titre" type="text" name="titre" maxlength="100" /></p>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="example-text-input" class="col-2 col-form-label">Adresse</label>
+                        <div class="col-10">
+                          <p>{{ form.adresse.errors }}<label for="{{form.adresse.id_for_label}}"></label>
+                          <input class="form-control" placeholder="10 rue des marmots, 72584 PARIS" id="adresse" type="text" name="adresse" maxlength="100" /></p>
+                        </div>
+                    </div>
+                        <div class="row setup-content" id="step-1">
+                            <div class="col-xs-12">
+                                <div class="col-md-12 well text-center">
+                                  <label for="fileToUpload">Selectionner votre image</label><br />
+                                  <p>{{ form.image.errors }}<label for="{{form.image.id_for_label}}"></label>
+                                  <input type="file" name="image" id="image" onchange="fileSelected();"/>
+                              </div>
+                              <div id="fileName"></div>
+                              <div id="fileSize"></div>
+                              <div id="fileType"></div>
+                              <div id="progressNumber"></div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="form-group sub">
+                    <input class="btn btn-info" type="submit" value="Ajouter le restaurant" />
+                </div>
+              </form>
+
+              <!-- /container -->
+
+
+                </div>
+
+            </div>
+        </div>
+
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/upload.js"></script>
+  </body>
 </html>
