--- a/choixdej/ajout/templates/ajout/confirmation.html
+++ b/choixdej/ajout/templates/ajout/confirmation.html
@@ -51,7 +51,7 @@
                 <div class="col-xs-12 col-md-12 ">
 
 
-                      <p>Merci d'avoir ajouter un nouveau restaurant !!!</p>
+                      <p>Votre restaurant a bien été ajouté, Merci !!</p>
 
 
                 </div>
