--- a/choixdej/home/templates/home/home.html
+++ b/choixdej/home/templates/home/home.html
@@ -49,8 +49,8 @@
                   {% for img in image %}
                     <img id="resto" src="{{ img.image.url }}" />
                     <br/>
-                    <h1 id="nom-resto"> {{ img.titre }} </h1>
-                    <h3 id="adresse-resto"> {{ img.adresse }} </h3>
+                    <h1 id="nom-resto"> {{ img.nom_restaurant }} </h1>
+                    <h3 id="adresse-resto"> {{ img.adresse_restaurant }} </h3>
                   {% endfor %}
             </div>
         </div>
