--- a/choixdej/index/templates/index/index.html
+++ b/choixdej/index/templates/index/index.html
@@ -33,6 +33,7 @@
                     <div class="form-group row">
                         <label for="example-text-input" class="col-2 col-form-label">Identifiant / Mail</label>
                         <div class="col-10">
+                              <p>{{ form.username.errors }}<label for="{{form.username.id_for_label}}"></label>
                               <input type="text" class="form-control" placeholder="j.deschamps@gmail.com" id= {{ form.username }}
                               <p class="help-block text-danger"></p>
                         </div>
@@ -41,6 +42,7 @@
                     <div class="form-group row">
                         <label for="example-password-input" class="col-2 col-form-label">Mot de Passe</label>
                         <div class="col-10">
+                              <p>{{ form.password.errors }}<label for="{{form.password.id_for_label}}"></label>
                               <input type="password" class="form-control" placeholder="Ton mot de passe *" id= {{ form.password }}
                                 <p class="help-block text-danger"></p>
                         </div>
