--- a/choixdej/vote/templates/vote/vote.html
+++ b/choixdej/vote/templates/vote/vote.html
@@ -1,16 +1,75 @@
-<!DOCTYPE html>
-<html lang="fr">
+<!doctype html>
+{% load static %}
+{% load ratings %}
+<html>
 
-<head>
-    <title>Choixdej</title>
-</head>
-<body id="page-top" class="index">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Team ChoixDej">
+        <title>Index - ChoixDej</title>
 
-        Mets des notes aux restaurants pour avoir la chance de manger ou tu le souhaites !
-      </br>
-      <a href="{% url 'accueil' %}">Accueil</a>
-      <a href="{% url 'deco' %}">Deconnexion</a>
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="/static/css/jquery.rateyo.css"/>
+        <link href="/static/css/styles.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
+        <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
+        <!-- Respond.js IE8 support of media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="/static/js/respond.min.js"></script>
+        <![endif]-->
+    </head>
 
-</body>
+    <body>
+        <header>
 
+
+            <nav class="navbar  bg-primary navbar-static-top">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <a href="#"><h3>  <img src="/static/images/logo.png" width="30" alt="logo"/>ChoixDej ! </h3></a>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="{% url 'accueil' %}">Accueil</a></li>
+                            <li><a href="{% url 'groupe' %}">Gestion groupes </a></li>
+                            <li><a href="{% url 'vote' %}">Noter</a></li>
+                            <li><a href="{% url 'ajoutrestaurant' %}">Ajouter Resto</a></li>
+                            <li><a href="{% url 'deco' %}">Déconnexion</a></li>
+                        </ul>
+                    </div><!--/.nav-collapse -->
+                </div>
+            </nav>
+        </header>
+        <div class="container-affResto">
+          {% for resto in allresto %}
+            <div class="affiche-resto col-md-offset-5 col-md-7">
+                <h2> {{ resto.nom_restaurant }} </h2>
+                {% ratings resto %}
+            </div>
+          {% endfor %}
+        </div>
+        <script type="text/javascript" src="/static/js/jquery.min.js"></script>
+        <script type="text/javascript" src="/static/js/jquery.rateyo.js"></script>
+        <script>
+        $(function () {
+
+            $(".rateyo").rateYo({
+                fullStar: true
+            });
+        });
+
+        </script>
+
+
+    </body>
 </html>
