correction ortho Btn Inscris Toi

--- a/choixdej/index/templates/index/index.html
+++ b/choixdej/index/templates/index/index.html
@@ -49,7 +49,7 @@
                     </div>
 
                       <input class="btn btn-info" type="submit" value="Se connecter" />
-                      <a href="/inscription"><button type="button" class="btn btn-warning">Pas de compte ? Inscrit toi ! </button></a>
+                      <a href="/inscription"><button type="button" class="btn btn-warning">Pas de compte ? Inscris toi ! </button></a>
               </form>
 
 
