--- a/choixdej/home/templates/home/home.html
+++ b/choixdej/home/templates/home/home.html
@@ -44,20 +44,38 @@
                 </div>
             </nav>
         </header>
+        {% if image %}
+          <div class="row">
+              <div class="img-resto col-md-6 col-md-offset-3">
+                    {% for img in image %}
+                      <img id="resto" src="{{ img.image.url }}" />
+                      <br/>
+                      <h1 id="nom-resto"> {{ img.nom_restaurant }} </h1>
+                      <h3 id="adresse-resto"> {{ img.adresse_restaurant }} </h3>
+                    {% endfor %}
+              </div>
+          </div>
+
+          <div class="form-group go">
+            <form method="post" action="">
+              {% csrf_token %}
+              <input class="btn btn-info" type="submit" name="jyvais" value="J'y vais !" />
+              <input class="btn btn-warning" type="submit" name="jyvaispas" value="Je n'y vais pas!" />
+            </form>
+          </div>
+          {% for vais in jyvais %}
+            <p>{{ vais.username }}</p>
+          {% endfor %}
+        {% else %}
         <div class="row">
             <div class="img-resto col-md-6 col-md-offset-3">
-                  {% for img in image %}
-                    <img id="resto" src="{{ img.image.url }}" />
-                    <br/>
-                    <h1 id="nom-resto"> {{ img.nom_restaurant }} </h1>
-                    <h3 id="adresse-resto"> {{ img.adresse_restaurant }} </h3>
-                  {% endfor %}
+              <h1>Aucun restaurant n'est disponible sur ce groupe.</h1>
+              </br>
+              <h1>Ou alors vous n'appartenez à aucun groupe.</h1>
+              </br>
+              <h2>Dans ce cas, rejoignez en un pour retrouver vos restaurants préférés !</h2>
             </div>
         </div>
-
-        <div class="form-group go">
-            <button type="submit" class="btn btn-info">J'y vais !</button>
-            <button type="submit" class="btn btn-warning"> Nope !</button>
-        </div>
+        {% endif %}
     </body>
 </html>
