--- a/choixdej/home/templates/home/home.html
+++ b/choixdej/home/templates/home/home.html
@@ -44,7 +44,7 @@
                 </div>
             </nav>
         </header>
-        {% if image %}
+        {% if allgroupes %}
           <div class="row">
               <div class="img-resto col-md-6 col-md-offset-3">
                     {% for img in image %}
@@ -57,11 +57,13 @@
           </div>
 
           <div class="form-group go">
-            <form method="post" action="">
-              {% csrf_token %}
-              <input class="btn btn-info" type="submit" name="jyvais" value="J'y vais !" />
-              <input class="btn btn-warning" type="submit" name="jyvaispas" value="Je n'y vais pas!" />
-            </form>
+            {% if heure.hour < 11 %}
+              <form method="post" action="">
+                {% csrf_token %}
+                <input class="btn btn-info" type="submit" name="jyvais" value="J'y vais !" />
+                <input class="btn btn-warning" type="submit" name="jyvaispas" value="Je n'y vais pas!" />
+              </form>
+            {% endif %}
           </div>
           {% for vais in jyvais %}
             <p>{{ vais.username }}</p>
