Ajout changement de groupe

--- a/choixdej/groupe/templates/groupe/rejoindre.html
+++ b/choixdej/groupe/templates/groupe/rejoindre.html
@@ -52,23 +52,24 @@
 
 
         <div class="gestionGrp">
-                    {% if allgroupes %}
+                   <!-- {% if allgroupes %}
                     <h2> Mon Groupe </h2>
-                    {% else %}
+                    {% else %} 
                     <h2> Vos n'avez encore rejoins aucun groupes. </h2>
-                    {% endif %}
+                    {% endif %} -->
                     <div class="funkyradio">
                     {% for grp in allgroupes %}
                     <div class="row test">
 
                         <div class="col xs-2 col-md-1 col-md-offset-4">
                             <div class="funkyradio-primary">
-                                <input type="radio" name="groupe" id={{grp.id}} />
-                                <label for={{grp.id}}>.</label>
+                                <form method="post" action="">
+                                     {% csrf_token %}
+                                <input class="btn btn-info" type="submit" name={{grp.id}} value="Choisir ce groupe en favori" /></form>
                             </div>
                         </div>
                             <div class="col-md-2">
-                                <h4 class="grp"> {{ grp.nom_groupes }} </h4>
+                                <h4 class="grp"> {{ grp.nom_groupes }}</h4>
                             </div>
                         </div>
                              <form method="post" action="">
@@ -77,7 +78,7 @@
 
                     {% endfor %}
                  </div>
-                {% if not allgroupes %}
+               
                   <a href="{% url 'creer' %}"><button type="button" class="btn btn-primary"> Créer un Groupe !</button></a>
 
 
@@ -86,11 +87,10 @@
                       {% csrf_token %}
                     <p>{{ form.nomgroupe.errors }}<label for="{{form.nomgroupe.id_for_label}}"></label>
                     <input id="nomgroupe" type="text" name="nomgroupe" maxlength="50" /></p>
-                    <input class="btn btn-info" type="submit" value="Rejoindre le groupe" />
+                    <input class="btn btn-info" type="submit" name="rejoindre" value="Rejoindre le groupe" />
                   </form>
                 </div>
-                {% endif %}
-
+                
 
 
     </body>
