Ajout oubli mdp

--- a/choixdej/index/templates/index/index.html
+++ b/choixdej/index/templates/index/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-
+        <a href="{% url 'password_reset' %}">Mot de pass oublié...</a>
 
     </body>
 </html>
