--- a/choixdej/static/css/styles.css
+++ b/choixdej/static/css/styles.css
@@ -34,9 +34,10 @@ body{
 
 }
 
-.bg-primary .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    background-color: red;
-    color: #FFC0CB;
+.bg-primary .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:visited {
+    color: #FFF;
+    font-weight: bold;
+    background-color: transparent;
 }
 
 #nom-resto{
