--- a/choixdej/vote/templates/vote/vote.html
+++ b/choixdej/vote/templates/vote/vote.html
@@ -50,11 +50,11 @@
                 </div>
             </nav>
         </header>
-        <div class="container-affResto">
+        <div class="container">
           {% for resto in allresto %}
-            <div class="affiche-resto col-md-offset-5 col-md-7">
-                <h2> {{ resto.nom_restaurant }} </h2>
-                {% ratings resto %}
+            <div class="affiche-resto row">
+                <h2 class="nomRestoVote col-xs-6 col-md-6"> {{ resto.nom_restaurant }} </h2>
+                <div class="etoileRestoVote col-xs-6 col-md-6">{% ratings resto %}</div>
             </div>
           {% endfor %}
         </div>
