--- a/choixdej/inscription/templates/inscription/inscription.html
+++ b/choixdej/inscription/templates/inscription/inscription.html
@@ -20,7 +20,7 @@
     <body>
         <header>
 
-            <h2>  <img src="/static/images/logo.png" width="150" alt="logo"/>ChoixDej ! </h2>
+            <img src="/static/images/logo2.png" width="300" alt="logo" id="logo"/>
         </header>
 
 
